syntax = "proto3";

package message;

message Book {
    int64 isbn = 1;
    string title = 2;
    string author = 3;
}

message GetBookRequest {
    int64 isbn = 1;
}

message GetBookViaAuthorRequest {
    string author = 1;
}

service BookService {
    rpc GetBook (GetBookRequest) returns (Book) {
    }
    rpc GetBooksViaAuthor (GetBookViaAuthorRequest) returns (stream Book) {
    }
    rpc GetGreatestBook (stream GetBookRequest) returns (Book) {
    }
    rpc GetBooks (stream GetBookRequest) returns (stream Book) {
    }
}